--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,35 @@
-# Ignore the virtualenv directory
-/.venv
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
 
-# Ignore the environment file
-/.env
+# macOS system files
+.DS_Store
+
+# macOS folder metadata
+.AppleDouble
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Python virtual environment
+venv/
+.env/
+
+# Editor-specific files
+.vscode/
+*.swp
+*.swo
+
+# Dependency directories (adjust as needed)
+__pycache__/
+node_modules/
+
+# env
+.env
+
+.pytest_cache
+
+*.csv
